feat (client) : edit frontend pages, delete dummies

--- a/src/client/InternshipRecords.Client/Layout/MainLayout.razor
+++ b/src/client/InternshipRecords.Client/Layout/MainLayout.razor
@@ -7,9 +7,8 @@
         </div>
         <nav class="app-nav">
             <NavLink href="/add-intern" class="nav-link" activeClass="active">Новый стажер</NavLink>
-            <NavLink href="/departments-projects" class="nav-link" activeClass="active">Направления/Проекты</NavLink>
+            <NavLink href="/directions-projects" class="nav-link" activeClass="active">Направления/Проекты</NavLink>
             <NavLink href="/interns" class="nav-link" activeClass="active">Список стажеров</NavLink>
-            <NavLink href="/chat" class="nav-link" activeClass="active">Чат</NavLink>
         </nav>
     </header>
 
