--- a/src/client/InternshipRecords.Client/Pages/InternsList.razor
+++ b/src/client/InternshipRecords.Client/Pages/InternsList.razor
@@ -1,6 +1,6 @@
 ﻿@page "/interns"
 @using InternshipRecords.Client.Services.Intern
-@using Shared.Models
+@using Shared.Models.Intern
 @inject InternService InternService
 @inject InternSignalRService InternSignalRService
 @inject NavigationManager NavigationManager
