--- a/src/client/InternshipRecords.Client/Pages/EditIntern.razor
+++ b/src/client/InternshipRecords.Client/Pages/EditIntern.razor
@@ -2,6 +2,9 @@
 @using InternshipRecords.Client.Services
 @using InternshipRecords.Client.Services.Intern
 @using Shared.Models
+@using Shared.Models.Project
+@using Shared.Models.Intern
+@using Shared.Models.Direction
 @inject InternService InternService
 @inject DirectionService DirectionService
 @inject ProjectService ProjectService
